--- a/resources/views/tasks/index.edge
+++ b/resources/views/tasks/index.edge
@@ -1,28 +1,52 @@
 @layout('layout/app')
 
 @section('content')
-  <h1>Tasks</h1>
-  <a href="{{ route('tasks.create') }}">Nova Tarefa</a>
-  <ul>
+  <h2>{{list.name}}</h2>
+  <div class="mb-3">
+    <a href="{{ route('lists.tasks.create', {list_id: list.id}) }}" class="btn btn-primary">Nova Tarefa</a>
+  </div>
+  <div class="share">
+    <form action="{{ route('lists.share', {id: list.id }) }}" method="POST">
+      {{ csrfField() }}
+      <div class="mb-3">
+        <select  class="form-select" name="user_id">
+          <option selected>Selecione um usuário para compartilhar...</option>
+          @each(user in userToShare)
+            <option value="{{user.id}}">{{user.name}}</option>
+          @endeach
+        </select>   
+      </div>
+      <div>
+        <button type="submit" class="btn btn-primary">Compartilhar</button>
+      </div>
+    </form>
+  </div>
+  <ul class="list-group mt-3">
     @each(task in tasks)
-      <li>
-        <a href="{{ route('tasks.show', { id: task.id }) }}">
+      <li class="list-group-item d-flex justify-content-between">
+        <div class="title">
           @if(task.done)
             <del>{{ task.title }}</del>
           @else
-            {{ task.title }}
+              {{ task.title }}
           @endif
-        </a>
-        <a href="{{ route('tasks.done', { id: task.id }) }}">[X]</a>
-        <a href="{{ route('tasks.edit', { id: task.id }) }}">Editar</a>
-        <form
-          style="display: inline;"
-          method="post"
-          action="{{
-            route('tasks.destroy', { id: task.id, qs: { _method: 'DELETE' } })
-          }}">
-            <button type="submit">Apagar</button>
-        </form>
+        </div>
+        <div class="actions">
+          <a href="{{ route('lists.tasks.show', { id: task.id,  list_id: list.id}) }}" class="btn btn-primary">Visualizar</a>
+          <a href="{{ route('lists.tasks.done', { id: task.id, list_id: list.id }) }}" class="btn btn-primary">
+            {{task.done ? 'Desfazer' : 'Fazer' }}
+          </a>
+          <a href="{{ route('lists.tasks.edit', { id: task.id, list_id: list.id }) }}" class="btn btn-primary">Editar</a>
+          <form
+            style="display: inline;"
+            method="post"
+            action="{{
+              route('lists.tasks.destroy', { id: task.id, list_id: list.id, qs: { _method: 'DELETE' } })
+            }}">
+              <button type="submit" class="btn btn-primary">Apagar</button>
+          </form>
+        </div>
+       
       </li>
     @endeach
   </ul>
