--- a/resources/views/layout/app.edge
+++ b/resources/views/layout/app.edge
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
           <ul class="navbar-nav me-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{{ route('lists.index') }}">Minhas Listas <span class="sr-only"></span></a>
+              <a class="nav-link" href="{{ route('lists.index') }}">Listas <span class="sr-only"></span></a>
             </li>
           </ul> 
           <ul class="navbar-nav">
